[package]
name = "russh-sftp"
version = "2.0.0-beta.4"
edition = "2021"
description = "SFTP subsystem supported server and client for Russh"
readme = "README.md"
repository = "https://github.com/AspectUnk/russh-sftp"
license = "Apache-2.0"
keywords = ["russh", "sftp", "ssh2", "server", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["io-util", "rt", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.4", features = ["serde"] }

async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4"
bytes = "1.5"
log = "0.4"

[dev-dependencies]
russh = "0.42"
russh-keys = "0.42"
env_logger = "0.11"
anyhow = "1.0"


[lints.rust]
unsafe_code = "forbid"
# missing_docs = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
bad_style = "warn"
dead_code = "allow" # TODO: "warn"
improper_ctypes = "warn"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
non_shorthand_field_patterns = "warn"
no_mangle_generic_items = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
trivial_numeric_casts = "warn"
unused_results = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unconditional_recursion = "warn"
unused = "warn"
unused_allocation = "warn"
unused_comparisons = "warn"
unused_parens = "warn"
while_true = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
expect_used = "warn"
unwrap_used = "warn"
enum_glob_use = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
cast_lossless = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
module_name_repetitions = "allow"