[package]
name = "russh-sftp"
version = "2.0.2"
edition = "2021"
description = "SFTP subsystem supported server and client for Russh"
readme = "README.md"
repository = "https://github.com/AspectUnk/russh-sftp"
license = "Apache-2.0"
keywords = ["russh", "sftp", "ssh2", "server", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }

async-trait = "0.1"
thiserror = "1.0"
chrono = "0.4"
bytes = "1.6"
log = "0.4"
flurry = "0.5"

[dev-dependencies]
russh = "0.43"
russh-keys = "0.43"
env_logger = "0.11"
anyhow = "1.0"
criterion = {version = "0.5", features = ["async_tokio"] }
futures = "0.3"

[[bench]]
name = "upload_benchmark"
harness = false